Fix the width of the parent div containing the SVG, which caused the borders to appear too small.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -15,6 +15,7 @@ body, button {
 
 #app {
     border: 1px solid lightgrey;
+    width: fit-content;
 }
 
 #moveBtn {
